--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -1,12 +1,17 @@
-button{
+button {
     background-color: green;
-    font-size: 16px;
-    padding: 15px 30px;
-    color: white;
-    width: 100px;
+    font-size : 16px;
+    padding : 15px 30px;
+    color : white;
+    width : 100px;
 }
 
-.count{
-    font-size: 50px;
-    
+.count {
+    font-size : 50px;
+    padding : 15px 30px;
+}
+.reset {
+    background-color: red;
+    font-size : 16px;
+    width : 200px;
 }
