--- a/src/components/counter/Counter.css
+++ b/src/components/counter/Counter.css
@@ -1,3 +1,4 @@
+/*
 button {
     background-color: green;
     font-size : 16px;
@@ -15,3 +16,4 @@ button {
     font-size : 16px;
     width : 200px;
 }
+*/
